# ECC

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  test.sh
src/: ecc.c  generator.c  generator.h  parser.c  parser.h  tokenizer.c  tokenizer.h  utils.c  utils.h
src/lib/: vector.c  vector.h
src/parser/: parser.c  parser.h  primary.c  primary.h  stmt.c  stmt.h  symbolTable.c  symbolTable.h
